tests/NormalTests/paczka1/fuzzy1/41090463.err
Error in line 1: S335 A588 1,7
Error in line 2: S335 S626 92,9
Error in line 7: Zdsuw534Io S335 90,4
Error in line 24: 1FzMJG A616 35,5
Error in line 26: 1FzMJG A588 83,3
Error in line 31: CCBGOwXiG A616 50,5
Error in line 36: CCBGOwXiG S626 37,1
